Sun Jan  5 13:53:53 1997  Jim Blandy  <jimb@floss.cyclic.com>

	* Makefile.am (EXTRA_DIST): Distribute PLUGIN/guile.libs.in, not
	PLUGIN/guile.libs.  configure generates the latter from the former.
	* Makefile.in: Rebuilt.
	
	* configure.in: Call AM_PROG_INSTALL; the automake manual says we
	need this if we install scripts, like guile-snarf.
	* configure: Rebuilt.

Thu Jan  2 01:56:38 1997  Marius Vollmer  <mvo@zagadka.ping.de>

	* Makefile.am (EXTRA_DIST): Added DYNAMIC-LINKING

Sat Dec 28 19:14:01 1996  Gary Houston  <ghouston@actrix.gen.nz>

	* socket.c (scm_addr_vector): fix faulty scm_listify.

Sat Dec 28 13:55:58 1996  Marius Vollmer  <mvo@zagadka.ping.de>

	* read.c (scm_lreadr): Encountering EOF after skipping a SCSH
 	style block comment is no longer considered an error.

Fri Dec 27 13:44:23 1996  Marius Vollmer  <mvo@zagadka.ping.de>

	* PLUGIN/guile.libs.in: New file.
	* PLUGIN/guile.libs: Removed from repository.
	* configure.in: Create PLUGIN/guile.libs from
 	PLUGIN/guile.libs.in.  This is for including additonal libraries
 	needed for dynamic linking.
  	* Makefile.am (EXTRA_DIST): Distribute PLUGIN/guile.libs.in
 	instead of PLUGIN/guile.libs.
	
  	* Makefile.am: Added explicit dependency "dynl.o: dynl.x".
	
Sun Dec 22 23:06:14 1996  Jim Blandy  <jimb@floss.cyclic.com>

	* list.c (scm_delq_x, scm_delv_x, scm_delete_x): Delete all
 	occurrences of the given element from the list, not just the
 	first.  This is how the Emacs Lisp functions behave, how the
 	analogous Common Lisp functions behave, and (I believe) how the
 	older Maclisp functions worked.  I realize that this change may
 	break code, but it seemed better to break it before the Guile
 	release than after.

	* gc.c (scm_protect_object, scm_unprotect_object): New functions.
	Their prototypes were already present in gc.h, but they weren't
	implemented.
	(scm_init_storage): Initialize scm_protects.
	* root.c (scm_protects): New element of scm_sys_protects.
